# hugworm

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  entry.js  prepare-wasm.sh  prepare.sh
site/: index.html  package-lock.json  script.js
src/: frag.f.glsl  lib.rs  main.rs  renderer.rs  scene.rs  segment.rs  sequence.rs  turn.rs  vertex.v.glsl
src/platform_opengl/: frag.f.glsl  mod.rs  renderer.rs  vertex.v.glsl
src/platform_wasm/: frag.f.glsl  mod.rs  renderer.rs  webgl.rs
