[package]
name = "hugworm"
version = "0.1.0"
authors = ["Magnus Hoff <maghoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.17.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.50"
wasm-bindgen-test = "0.2.50"
js-sys = "0.3.27"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.27"
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
