[package]
name = "hugworm"
version = "0.1.0"
authors = ["Magnus Hoff <maghoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "0.17.0"
log = "0.4.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.50"
wasm-bindgen-test = "0.2.50"
wasm-bindgen-console-logger = "0.1.1"
js-sys = "0.3.27"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.27"
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glium = "0.30.1"
simple_logger = "1.12.1"
